Getting the front page fixed up it is using the flow row wrap

--- a/sites/all/themes/laporteLibrary/assets/less/frontPage.less
+++ b/sites/all/themes/laporteLibrary/assets/less/frontPage.less
@@ -145,10 +145,11 @@
 .tagRow,.subTitleElement{
   padding:.5em;
   display:flex;
-  justify-content: space-around;
-  //flex-flow: row wrap;
-  flex-flow: row;
-  width:100%;
+  //justify-content: space-around;
+  flex-flow: row wrap;
+  //flex-flow: row;
+  align-conent:flex-start;
+   width:100%;
   a[href*="taxonomy"]{
     font-size:1.3em;
     width:auto;
