--- a/sites/all/themes/laporteLibrary/assets/less/layout.less
+++ b/sites/all/themes/laporteLibrary/assets/less/layout.less
@@ -52,7 +52,9 @@ a[href^="/taxonomy"]:not([href*="?page="]),.researchMenuItem{/*These are tags on
   position:relative;
   white-space: nowrap;
 }
-
+.researchMenuItem{
+  width: 13%;
+}
 a[href^="/taxonomy/term/76"]:not([href*="?page="]),.AllMenu{//Arts
   .colorHover(darken(@colorGreen1,10%));
 }
@@ -82,6 +84,9 @@ a[href^="/taxonomy/term/50"]:not([href*="?page="]),.ScienceMenu{//Teens
 }
 a[href^="/taxonomy/term/82"]:not([href*="?page="]){//Work Life
   .colorHover(darken(@colorBlue9,10%));
+}
+a[href^="/taxonomy/term/85"]:not([href*="?page="]){//Community
+  .colorHover(darken(@colorBrown3,10%));
 }
 .adgendaLink,.linkIcon{
   font-size:1.2em;
